Fixed problems with text-align

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,15 +7,15 @@
   height: 100%;
 }
 
-.html-editor-widget details {
+.rte-widget details {
   margin: 8px 0;
 }
 
-.html-editor-widget summary {
+.rte-widget summary {
   cursor: pointer;
 }
 
-.html-editor-widget textarea {
+.rte-widget textarea {
   height: 200px;
   width: 100%;
   resize: vertical;
